# gmuse

./: .copier-answers.yml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  cspell.json  noxfile.py  pyproject.toml
.github/agents/: copilot-instructions.md
.github/workflows/: release.yaml  run-checks.yaml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/_ext/: prompt_templates.py
docs/source/: conf.py  index.md
docs/source/_static/: custom.css  gmuse-demo.cast
docs/source/development/: contributing.md  development_guide.md  index.md  shell-completions.md
docs/source/explanation/: architecture.md  how_it_works.md  index.md  llm_providers.md  privacy.md
docs/source/getting_started/: completions.md  installation.md  quickstart.md
docs/source/how_to/: completions.md  configuration.md  index.md  installation.md  troubleshooting.md
docs/source/reference/: cli.md  configuration.md  default_models.md  index.md  prompt-templates.md  validation.md
docs/source/tutorials/: index.md  quickstart.md
specs/001-llm-commit-messages/: PLANNING_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-commit-messages/checklists/: requirements.md
specs/001-llm-commit-messages/contracts/: prompt-templates.md
specs/001-prompt-template-docs/: spec.md
specs/002-zsh-completions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-zsh-completions/checklists/: requirements.md
specs/002-zsh-completions/contracts/: runtime-helper.md
specs/003-msg-dry-run/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-msg-dry-run/checklists/: requirements.md
specs/003-msg-dry-run/contracts/: cli.md
specs/004-commit-message-max-chars/: plan.md  research.md  spec.md  tasks.md
specs/004-commit-message-max-chars/checklists/: requirements.md
specs/004-commit-message-max-chars/contracts/: config.md
specs/004-global-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-global-config/checklists/: requirements.md
specs/004-global-config/contracts/: cli-config.md
specs/005-prompt-template-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-prompt-template-docs/checklists/: requirements.md
specs/005-prompt-template-docs/contracts/: template-extraction.md
specs/006-commit-message-max-chars/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/006-commit-message-max-chars/contracts/: prompt-context.md
src/gmuse/: __init__.py  __main__.py  commit.py  config.py  exceptions.py  git.py  llm.py  logging.py  prompts.py
src/gmuse/_docs/: __init__.py  template_extractor.py
src/gmuse/cli/: completions.py  config.py  main.py
src/gmuse/templates/: zsh_completion.zsh
tests/: conftest.py
tests/integration/: test_branch_context.py  test_cli.py  test_cli_config.py  test_cli_dry_run_integration.py  test_completions_run.py  test_prompt_template_docs_sync.py
tests/unit/: test_cli_completions.py  test_cli_completions_additional.py  test_cli_config.py  test_cli_load_config_llm_overrides.py  test_cli_main.py  test_cli_main_additional.py  test_cli_main_import_time.py  test_cli_msg_dry_run.py  test_commit.py  test_config.py  test_config_branch.py  test_config_extra.py  test_config_log_file.py  test_config_write.py  test_git.py  test_git_branch.py  test_llm.py  test_logging_additional.py  test_logging_extra.py  test_main_env.py  test_prompt_template_extraction.py  test_prompts.py  test_prompts_branch.py
tools/: verify_docs_consistency.py
